--- a/HGS_Winter/Action.vcxproj
+++ b/HGS_Winter/Action.vcxproj
@@ -198,7 +198,8 @@
     <ClCompile Include="code\ranking.cpp" />
     <ClCompile Include="code\renderer.cpp" />
     <ClCompile Include="code\result.cpp" />
-    <ClCompile Include="code\sample\sample.cpp" />
+    <ClCompile Include="code\sample\sample_object.cpp" />
+    <ClCompile Include="code\sample\sample_task.cpp" />
     <ClCompile Include="code\shadow.cpp" />
     <ClCompile Include="code\slow.cpp" />
     <ClCompile Include="code\sound.cpp" />
@@ -253,7 +254,8 @@
     <ClInclude Include="code\ranking.h" />
     <ClInclude Include="code\renderer.h" />
     <ClInclude Include="code\result.h" />
-    <ClInclude Include="code\sample\sample.h" />
+    <ClInclude Include="code\sample\sample_object.h" />
+    <ClInclude Include="code\sample\sample_task.h" />
     <ClInclude Include="code\shadow.h" />
     <ClInclude Include="code\slow.h" />
     <ClInclude Include="code\sound.h" />
