--- a/HGS_Winter/Action.vcxproj
+++ b/HGS_Winter/Action.vcxproj
@@ -183,6 +183,7 @@
     <ClCompile Include="code\meshwall.cpp" />
     <ClCompile Include="code\model.cpp" />
     <ClCompile Include="code\motion.cpp" />
+    <ClCompile Include="code\npc.cpp" />
     <ClCompile Include="code\number.cpp" />
     <ClCompile Include="code\object.cpp" />
     <ClCompile Include="code\object2D.cpp" />
@@ -244,6 +245,7 @@
     <ClInclude Include="code\meshwall.h" />
     <ClInclude Include="code\model.h" />
     <ClInclude Include="code\motion.h" />
+    <ClInclude Include="code\npc.h" />
     <ClInclude Include="code\number.h" />
     <ClInclude Include="code\object.h" />
     <ClInclude Include="code\object2D.h" />
